website/static/css/quick-project-search-plugin.css
.node-styling {
    background-color: #fff;
    border: 1px solid #ABC0CD;
    padding: 3px;
    color: #555;
}

.node-styling:hover {
    background-color: #337AB7;
    cursor: pointer;
    color: #FFF;
}

.quick-project button {
    -webkit-appearance: none;
    outline: none;
    border: 0;
    background: transparent;
}

.load-nodes {
    font-size: 2em;
}
.load-nodes:hover {
    color: #333;
}

.quick-project .selected {
    color: #000000;
}

.quick-project .not-selected {
    color: #347BB7;
}

.sort-group {
  display: inline-block;

}
.node-col-headers {
    font-weight: bold;
}

@media screen and (max-width: 768px) {
    .node-col-headers {
        display: none;
    }

    .sm-new-and-noteworthy {
        display: none;
    }

    .noteworthy-spacing {
        margin-top: 10px;
    }

    .conference-centering {
        text-align: center;
    }

}

@media screen and (min-width: 768px) {
    .node-sort-dropdown {
        display: none;
    }

    .noteworthy-spacing {
        margin-left: 1px;
        margin-right: 1px;
        margin-top: 10px;
    }
}

.quick-project label {
    font-weight: normal;
}

.prevent-overflow {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.blank-line {
    margin-bottom: 15px;
}

.quick-search-input input {
    height: 38px;
    border-radius: 5px;
    display: inline-block;
    padding-right: 40px;
}

.quick-search-input span {
    display: inline-block;
    margin-left: -36px;
    background: #eee;
    border-radius: 12px;
    color: #888;
    font-size: 13px;
    padding: 1px;
    width: 26px;

}
.quick-search-col {
    padding-left: 5px;
}

.public-projects-item {
    background: #FFF;
    color: #333;
    padding: 10px;
    margin-bottom: 5px;
}
.public-projects-item:hover {
    cursor: pointer;
    background-color: #337AB7;
    color: #fff;
}

